--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,9 +2,11 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+
     <dimen name="button_area_width">200dp</dimen>
     <dimen name="button_area_marginTop">50dp</dimen>
     <dimen name="button_marginTop">10dp</dimen>
-    <dimen name="fab_margin">16dp</dimen>
+
+    <dimen name="title_top_margin">20dp</dimen>
     <dimen name="header_textSize">24dp</dimen>
 </resources>
