--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -14,7 +14,7 @@
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
         android:paddingTop="@dimen/activity_vertical_margin"
-        tools:context="com.wyattbarnes.udacityproject.MainActivity"
+        tools:context="com.wyattbarnes.udacityportfolio.MainActivity"
         tools:showIn="@layout/activity_main">
 
             <TextView
